--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@iconify-json/simple-icons": "^1.2.63",
     "@iconify-json/vscode-icons": "^1.2.37",
     "@nuxt/content": "^3.9.0",
+    "@nuxt/icon": "^2.2.0",
     "@nuxt/image": "^2.0.0",
     "@nuxt/ui": "^4.3.0",
+    "@nuxtjs/i18n": "^10.2.1",
     "@nuxtjs/mcp-toolkit": "0.6.0",
     "better-sqlite3": "^12.5.0",
     "mermaid": "^11.12.2",
